--- a/css/editor-blocks.css
+++ b/css/editor-blocks.css
@@ -535,7 +535,7 @@
   bottom: 28px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 500;
+  z-index: 9999;
 
   display: flex;
   align-items: center;
